# openbot_ros

./: .gitmodules  CHANGELOG.rst  README.md
docker/: Dockerfile  README.md  (+2 more)
openbot_driver/openbot_driver/: CMakeLists.txt  package.xml
openbot_driver/openbot_driver/docs/: 底盘串口通信协议.xlsx
openbot_driver/openbot_driver/launch/: base_driver.launch.py
openbot_driver/openbot_driver/msg/: BaseInfo.msg
openbot_driver/openbot_driver/param/: chassis_param.yaml
openbot_driver/openbot_driver/src/: base_driver.cpp  base_driver_node.cpp  serial_link.cpp
openbot_driver/openbot_driver/srv/: SetDevice.srv
openbot_fake_robot/: CMakeLists.txt  package.xml
openbot_fake_robot/launch/: diablo_ctrl.launch.py  turtlebot3_fake_node.launch.py
openbot_fake_robot/param/: nav2_params.yaml  nav2_params_local_pc.yaml  waffle.yaml
openbot_fake_robot/src/: initial_pose_node.cpp  turtlebot3_fake_node.cpp
openbot_fake_robot/src/motion_control/: diablo_fake_node.py
openbot_fake_robot/urdf/: turtlebot3_waffle.urdf
openbot_localization/openbot_slam/openbot_slam/: CMakeLists.txt
openbot_localization/surfel_fusion/: CMakeLists.txt  package.xml
openbot_localization/surfel_fusion/launch/: surfel_fusion.launch.py
openbot_localization/surfel_fusion/src/: fusion_functions.cpp  ros_node.cpp  surfel_map.cpp
openbot_ros/: CMakeLists.txt  package.xml
openbot_ros/cmake/: functions.cmake
openbot_ros/cmake/modules/: FindEigen3.cmake  FindGMock.cmake  FindLuaGoogle.cmake  FindSphinx.cmake
openbot_ros/include/messages_conversion/: builtin_interfaces_converter.hpp  geometry_msgs_converter.hpp  nav_msgs_converter.hpp  proto_msgs_to_ros.hpp  ros_msgs_to_proto.hpp  sensor_msgs_converter.hpp  std_msgs_converter.hpp
openbot_ros/include/openbot_ros/: node.hpp  node_constants.hpp  ros_log_sink.hpp  sensor_bridge.hpp  time_conversion.hpp  visualization.hpp
openbot_ros/launch/: demo_nav2_octomap_openbot.launch.py  demo_openbot.launch.py  mockamap_generator.launch.py  openbot_ros.bringup.launch.py  openbot_ros.ros_bridge.launch.py
openbot_ros/openbot_ros/: CMakeLists.txt  global_planner.cpp  global_planner.hpp  local_planner.hpp  map_generator.cpp  map_generator.hpp  mockamap_generator.cpp  mockamap_generator.hpp  msg_conversion.cpp  msg_conversion.hpp  node.cpp  node.hpp  node_constants.hpp  node_main.cpp  node_options.cpp  node_options.hpp  pointcloud_to_occupancy_grid.cpp  pointcloud_to_occupancy_grid.hpp  pointcloud_to_occupancy_grid_main.cpp  sensor_bridge.cpp  sensor_bridge.hpp  tf_bridge.cpp  tf_bridge.hpp  time_conversion.cpp  time_conversion.hpp  urdf_reader.hpp  visualization.cpp  visualization.hpp  visualization_main.cpp
openbot_ros/openbot_ros/messages_conversion/: builtin_interfaces_converter.cpp  builtin_interfaces_converter.hpp  geometry_msgs_converter.cpp  geometry_msgs_converter.hpp  nav_msgs_converter.cpp  nav_msgs_converter.hpp  proto_msgs_to_ros.cpp  proto_msgs_to_ros.hpp  ros_msgs_to_proto.cpp  ros_msgs_to_proto.hpp  sensor_msgs_converter.cpp  sensor_msgs_converter.hpp  std_msgs_converter.cpp  std_msgs_converter.hpp  vision_msgs_converter.hpp
openbot_ros/openbot_ros/visualization/: global_planner_visualization.cpp  global_planner_visualization.hpp  local_planner_visualization.cpp  local_planner_visualization.hpp
openbot_ros/params/: openbot_config.yaml
openbot_ros/rviz/: nav2_octomap_diablo.rviz  nav2_octomap_openbot.rviz  openbot_ros.rviz
openbot_ros/src/: msg_conversion.cpp  node_main.cpp  node_options.cpp  sensor_bridge.cpp  time_conversion.cpp  urdf_reader.cpp  visualization.cpp  visualization_main.cpp
openbot_ros/src/messages_conversion/: builtin_interfaces_converter.cpp  geometry_msgs_converter.cpp  nav_msgs_converter.cpp  proto_msgs_to_ros.cpp  ros_msgs_to_proto.cpp  sensor_msgs_converter.cpp  shape_msgs_converter.cpp  std_msgs_converter.cpp  vision_msgs_converter.cpp
openbot_ros/urdf/: README.md
openbot_ros_simulator/: CMakeLists.txt  package.xml  plugins_description.xml
openbot_ros_simulator/include/openbot_ros_simulator/: goal_common.hpp  goal_pose_updater.hpp  goal_tool.hpp
openbot_ros_simulator/src/: goal_tool.cpp
openbot_simulation/openbot_fake_robot/: CMakeLists.txt  package.xml
openbot_simulation/openbot_fake_robot/launch/: diablo_ctrl.launch.py  turtlebot3_fake_node.launch.py
openbot_simulation/openbot_fake_robot/param/: diablo.yaml  nav2_params.yaml  nav2_params_local_pc.yaml
openbot_simulation/openbot_fake_robot/urdf/: turtlebot3_waffle_with_meshes.urdf
openbot_simulation/openbot_rviz/: CMakeLists.txt  plugins_description.xml
openbot_simulation/openbot_rviz/launch/: test_all.launch.py
openbot_simulation/openbot_rviz/src/: bounding_box_3d.cpp  detection_3d.cpp  detection_3d_array.cpp  goal_tool.cpp  planning_panel.cpp
openbot_simulation/openbot_simulator/: CMakeLists.txt  package.xml
openbot_simulation/openbot_simulator/launch/: empty_world.launch.py  openbot_dqn_stage1.launch.py  openbot_dqn_stage3.launch.py  openbot_house.launch.py  openbot_indoor.launch.py  openbot_matterport.launch.py  openbot_tunnel.launch.py  openbot_world.launch.py  robot_state_publisher.launch.py  spawn_openbot.launch.py
openbot_simulation/openbot_simulator/urdf/: openbot_burger.urdf  openbot_waffle_pi.urdf
openbot_simulation/openbot_simulator/worlds/: openbot_dqn_stage3.world  openbot_garage.world  openbot_indoor.world  openbot_matterport.world  openbot_matterport2.world  openbot_tunnel.world  openbot_world.world
openbot_simulator/: CMakeLists.txt  package.xml
openbot_simulator/launch/: fake_localization.launch.py  opebot_house.launch.py  openbot_dqn_stage2.launch.py  openbot_dqn_stage4.launch.py
openbot_simulator/models/openbot_burger/: model.config  model.sdf
openbot_simulator/models/openbot_common/: model.config
openbot_simulator/scripts/: matterport3d.py
openbot_simulator/src/: openbot_drive.cpp
openbot_simulator/urdf/: openbot_waffle.urdf
openbot_simulator/worlds/: openbot_dqn_stage1.world  openbot_dqn_stage2.world  openbot_dqn_stage4.world  openbot_house.world
openbot_tasks/openbot_ros/: CMakeLists.txt  package.xml
(+160 files in other folders)
