<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openbot_ros</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="duyongquan3@jd.com">qundy</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>google-mock</build_depend>
  <build_depend>python3-sphinx</build_depend>
  <build_depend>ros_environment</build_depend>
  <build_depend>urdfdom_headers</build_depend>

  <depend>builtin_interfaces</depend>
  <depend>openbot</depend>
  <depend>openbot_msgs</depend>
  <depend>openbot_rviz</depend>
  <depend>openbot_simulator</depend>
  <depend>openbot_teleop</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>libgoogle-glog-dev</depend>
  <depend>libpcl-all-dev</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>
  <depend>sensor_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>
  <depend>visualization_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>octomap</depend>
  <depend>octomap_ros</depend>
  <depend>octomap_mapping</depend>
  <depend>octomap_server</depend>
  <depend>grid_map_octomap</depend>
  <depend>grid_map_ros</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
